--- a/.github/workflows/MavenLibPipelineJobs.yml
+++ b/.github/workflows/MavenLibPipelineJobs.yml
@@ -20,3 +20,7 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
+      - name: Create Maven Package
+        run: mvn package
+      - name: Deploy java
+        run: java -jar target/java-project-1.0-SNAPSHOT.jar Diego
