--- a/.github/workflows/MavenLibPipelineJobs.yml
+++ b/.github/workflows/MavenLibPipelineJobs.yml
@@ -5,7 +5,10 @@ on:
     inputs:
       shouldMaven:
         required: false
-        type: string  
+        type: string
+      javaVersion:
+        required: true
+        type: string
 jobs:
   build:
     name: Deploy maven test
@@ -16,8 +19,9 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: ${{ inputs.javaVersion }}
           distribution: 'adopt'
+          cache: 'maven'
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
       - name: Create Maven Package
