--- a/.github/workflows/MavenLibPipelineJobs.yml
+++ b/.github/workflows/MavenLibPipelineJobs.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
+      - name: Set up JDK ${{ inputs.javaVersion }}
         uses: actions/setup-java@v2
         with:
           java-version: ${{ inputs.javaVersion }}
