--- a/.github/workflows/MavenLibPipelineJobs.yml
+++ b/.github/workflows/MavenLibPipelineJobs.yml
@@ -9,6 +9,9 @@ on:
       javaVersion:
         required: true
         type: string
+      pathPom:
+        required: true
+        type: string
 jobs:
   build:
     name: Deploy maven test
@@ -23,8 +26,8 @@ jobs:
           distribution: 'adopt'
           cache: 'maven'
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots verify
+        run: mvn --batch-mode --update-snapshots verify --file ${{ inputs.pathPom }}
       - name: Create Maven Package
-        run: mvn package
+        run: mvn package --file ${{ inputs.pathPom }}
       - name: Deploy java
         run: java -jar target/java-project-1.0-SNAPSHOT.jar Diego
